# rust-vpk

./: .gitignore  Cargo.toml  README.md  VPK.md  release.sh
src/: archive_cache.rs  check.rs  consts.rs  entry.rs  filter.rs  io.rs  list.rs  main.rs  mount.rs  pack.rs  package.rs  result.rs  sort.rs  stats.rs  unpack.rs  util.rs
src/vpk/: archive.rs  archive_cache.rs  check.rs  entry.rs  io.rs  list.rs  mod.rs  mount.rs  pack.rs  package.rs  sort.rs  stats.rs  unpack.rs  util.rs
