[package]
name = "vpk"
version = "0.1.0"
authors = ["Mathias Panzenböck <grosser.meister.morti@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crc = "1.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
# just for sendfile()
libc = "0.2.83"
# FUSE might work on other OSes too (like macOS and BSD)
# but I don't use anything other than Linux (testing
# Windows binaries through wine).
cntr-fuse = { version = "0.4", optional = true }
daemonize = { version = "0.4.1", optional = true }

[features]
default = ["fuse"]
fuse = [ "cntr-fuse", "daemonize" ]
